fix AvailabilityClient to take a resourceID; deprecate AvailabilityStatus and cleanup Availability